--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a href="#" class="logo"><i class="fa-solid fa-utensils"></i>resto.</a>
 
       <nav class="navbar">
-        <a href="#home" class="active">homes</a>
+        <a href="#home" class="active">home</a>
         <a href="#dishes">dishes</a>
         <a href="#about">about</a>
         <a href="#menu">menu</a>
