--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
               </div>
             </div>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae
+              Lor em ipsum dolor, sit amet consectetur adipisicing elit. Vitae
               harum possimus eligendi voluptatum? Ab officiis mollitia autem
               blanditiis provident nihil magnam sapiente aspernatur recusandae.
               Nostrum ipsam deleniti quidem! Sapiente, labore.
@@ -655,6 +655,117 @@
       </div>
     </section>
     <!-- review section ends -->
+
+    <!-- order section starts -->
+    <section class="order" id="order">
+      <h3 class="sub-heading">order now</h3>
+      <h1 class="heading">free and fast</h1>
+
+      <form action="">
+        <div class="inputbox">
+          <div class="input">
+            <span>your number</span>
+            <input type="text" placeholder="enter your name" />
+          </div>
+          <div class="input">
+            <span>your number</span>
+            <input type="text" placeholder="enter your name" />
+          </div>
+        </div>
+        <div class="inputbox">
+          <div class="input">
+            <span>your order</span>
+            <input type="text" placeholder="enter food name" />
+          </div>
+          <div class="input">
+            <span>additional food</span>
+            <input type="test" placeholder="extra with food" />
+          </div>
+        </div>
+        <div class="inputbox">
+          <div class="input">
+            <span>how much</span>
+            <input type="number" placeholder="how many orders" />
+          </div>
+          <div class="input">
+            <span>date and time</span>
+            <input type="datetime-local" />
+          </div>
+        </div>
+        <div class="inputbox">
+          <div class="input">
+            <span>your address</span>
+            <textarea
+              name=""
+              placeholder="enter your address"
+              id=""
+              cols="30"
+              rows="10"
+            ></textarea>
+          </div>
+          <div class="input">
+            <span>your message</span>
+            <textarea
+              name=""
+              placeholder="enter your message"
+              id=""
+              cols="30"
+              rows="10"
+            ></textarea>
+          </div>
+        </div>
+        <input type="submit" value="order now" class="btn" />
+      </form>
+    </section>
+    <!-- order section ends -->
+    <!-- footer section starts -->
+    <section class="footer">
+      <div class="box-container">
+        <div class="box">
+          <h3>locations</h3>
+          <a href="#">india</a>
+          <a href="#">japan</a>
+          <a href="#">russia</a>
+          <a href="#">USA</a>
+          <a href="#">Uzbekistan</a>
+        </div>
+        <div class="box">
+          <h3>quick links</h3>
+          <a href="#">home</a>
+          <a href="#">dishes</a>
+          <a href="#">about</a>
+          <a href="#">menu</a>
+          <a href="#">review</a>
+          <a href="#">order</a>
+        </div>
+        <div class="box">
+          <h3>contact info</h3>
+          <a href="#">+123-456-789</a>
+          <a href="#">+111-222-333</a>
+          <a href="#">Elshod@gmail.com</a>
+          <a href="#">resto@gmail.com</a>
+          <a href="#">Jizzahk, Uzbekistan - 400104</a>
+        </div>
+        <div class="box">
+          <h3>follow us</h3>
+          <a href="#">facebook</a>
+          <a href="#">twitter</a>
+          <a href="#">instagram</a>
+          <a href="#">linkedin</a>
+        </div>
+      </div>
+      <div class="credit">
+        copyright @ 2021 by <span>mr .web designer</span>
+      </div>
+    </section>
+    <!-- footer section ends -->
+
+    <!-- loader part -->
+
+    <div class="loader-container">
+      <img src="./assets/images/loader.gif" />
+    </div>
+    <!-- loader part -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="./assets/js/index.js"></script>
   </body>
