--- a/index.html
+++ b/index.html
@@ -664,12 +664,12 @@
       <form action="">
         <div class="inputbox">
           <div class="input">
-            <span>your number</span>
+            <span>your name</span>
             <input type="text" placeholder="enter your name" />
           </div>
           <div class="input">
             <span>your number</span>
-            <input type="text" placeholder="enter your name" />
+            <input type="tel" placeholder="enter your number" />
           </div>
         </div>
         <div class="inputbox">
