--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
           </div>
           <div class="input">
             <span>your number</span>
-            <input type="tel" placeholder="enter your number" />
+            <input type="number" placeholder="enter your number" />
           </div>
         </div>
         <div class="inputbox">
